<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/menu_allgemein"
        android:icon="@drawable/ic_perm_identity_black_64dp"
        android:title="@string/title_allgemein" />

    <item
        android:id="@+id/menu_transport"
        android:icon="@drawable/ic_directions_car_black_24dp"
        android:title="@string/title_transport" />

    <item
        android:id="@+id/menu_start"
        android:icon="@drawable/ic_radio_button_checked_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/menu_unterkunft"
        android:icon="@drawable/ic_hotel_black_24dp"
        android:title="@string/title_unterkunft" />

    <item
        android:id="@+id/menu_rechnung"
        android:icon="@drawable/ic_credit_card_black_24dp"
        android:title="@string/title_rechnung" />



</menu>
