<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:design="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:text="Projekt"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/CreateProject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:text="Zeitraum"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/eTxt_DatumVon"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:hint="@string/from_date"/>

        <EditText
            android:id="@+id/eTxt_DatumBis"
            android:layout_width="122dp"
            android:layout_height="wrap_content"
            android:hint="@string/to_date"/>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:text="Nachname"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/Nachname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:text="Vorname"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/Vorname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:text="Kostenstelle"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/Kostenstelle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speichern_button"
        android:id="@+id/btn_save">

    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="100dp"
        android:orientation="horizontal">



    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_gravity="top"
            android:background="@drawable/shadow"/>

        <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:menu="@menu/navigation">

        </com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx>

    </FrameLayout>
    



</LinearLayout>
